feat: Implementação da rota para buscar usuario publico padronizada de acordo com a collection
